# RHEEDCapture

./: .gitignore  AGENTS.md  pyproject.toml
docs/: capture_flow_detail.md  capture_flow_summary.md  spec.md
rheed_capture/: bootstrap.py  main.py  utils.py
rheed_capture/application/capture/: angle_scan.py  cancellation.py  frame_capturer.py  recording.py  save_worker.py  sequence.py
rheed_capture/application/ports/: camera.py  motor.py  storage.py
rheed_capture/core/: camera_device.py  capture_service.py  data_manager.py  image_processor.py  preview_worker.py  settings.py  storage.py
rheed_capture/data_formats/: angle_scan_document.py  frame_metadata.py  recording.py  storage_naming.py
rheed_capture/domain/: capture_condition.py  capture_defaults.py  image_processor.py
rheed_capture/domain/angle_scan/: __init__.py  model.py  plan.py
rheed_capture/infrastructure/camera/: basler_camera.py  basler_configurators.py
rheed_capture/infrastructure/config/: defaults.py  json_store.py  migrations.py  schema.py
rheed_capture/infrastructure/motor/: defaults.py  mock.py
rheed_capture/infrastructure/motor/azd_cd/: adapter.py  driver.py  motor.py
rheed_capture/infrastructure/storage/: async_tiff_save_worker.py  experiment_storage.py  tiff_writer.py
rheed_capture/infrastructure/storage/sessions/: angle_scan.py  recording.py  sequence.py
rheed_capture/models/domain/: angle_scan.py
rheed_capture/models/hardware/: camera_device.py  motor_defaults.py  rotation_motor.py
rheed_capture/models/hardware/azd_cd/: __init__.py  adapter.py  driver.py  protocol.py
rheed_capture/models/io/: config_manager.py  frame_metadata.py  scan_document.py  settings.py  storage.py
rheed_capture/presentation/qt/: capture_coordinator.py  main_window.py
rheed_capture/presentation/qt/panels/: angle_scan.py  capture_chips.py  motor_settings.py  preview.py  recording.py  sequence.py  storage.py
rheed_capture/presentation/qt/preview/: processor.py
rheed_capture/presentation/qt/viewmodels/: angle_scan.py  preview.py  recording.py  sequence.py
rheed_capture/presentation/qt/widgets/: capture_controls.py  chip_selector.py  exposure_spinbox.py  grid_spec.py  image_viewer.py  preview_background.py
rheed_capture/presentation/qt/workers/: angle_scan_service.py  capture_service.py  capture_worker.py  preview_worker.py  recording_service.py
rheed_capture/services/: angle_scan_plan.py  angle_scan_service.py  capture_service.py  preview_worker.py
rheed_capture/ui/: main_window.py
rheed_capture/viewmodels/: angle_scan_viewmodel.py  capture_service.py  capture_viewmodel.py  preview_viewmodel.py  preview_worker.py
rheed_capture/views/: main_window.py
rheed_capture/views/components/: angle_scan_panel.py  histogram_viewer.py  image_viewer.py  motor_settings_panel.py  preview_panel.py  sequence_panel.py  storage_panel.py
tests/: test_angle_scan_service.py  test_application_capture.py  test_async_tiff_save_worker.py  test_bootstrap.py  test_camera_device.py  test_capture_coordinator.py  test_capture_service.py  test_config.py  test_data_manager.py  test_frame_capturer.py  test_image_processor.py  test_main_window.py  test_motor_speed_conversion.py  test_preview_pipeline.py  test_preview_worker.py  test_recording_capture.py  test_recording_service.py  test_recording_storage.py  test_settings_schema.py  test_storage.py  test_storage_sequence_sync.py
tests/viewmodels/: test_angle_scan_viewmodel.py
tests/views/: test_component.py  test_exposure_spinbox.py  test_main_window.py  test_main_window_sequence_preview.py  test_sequence_panel_preview.py
typings/pypylon/: _pylon.pyi  genicam.pyi  pylon.pyi
